@@ -4,6 +4,7 @@
     margin:0px;
     padding:0px;
     display:inline-block;
+    width:231px;
 }
 
 
